[tool.poetry]
name = "nba-predict"
version = "0.1.0"
description = ""
authors = ["nathanwright11 <nathanwright11@gmail.com>"]
readme = "README.md"
packages = [{include = "nba_predict"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
